# textalk

./: .gitignore  README.md  index.html
.github/workflows/: GitHubPages.yml
pwa/: Cargo.toml  index.html  manifest.json  service-worker.js
pwa/pkg/: package.json  text_talk.d.ts  text_talk.js  text_talk_bg.wasm  text_talk_bg.wasm.d.ts
pwa/src/js/: main.js  ocr.js  ui.js
pwa/src/rs/: lib.rs
