[package]
name = "text_talk"
version = "0.1.0"
authors = ["Dennis Amdi Skov Isaksen <dennis.isaksen@gmail.com>"]
description = "A simple OCR app to read aloud text"
license = "MIT"
repository = "https://github.com/dennis-isaksen/textalk"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/rs/lib.rs"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
ocrs = "0.9"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "HtmlVideoElement", "MediaDevices", "MediaStream", "Navigator", "Window", "Document", "HtmlElement", "CanvasRenderingContext2d", "ImageData", "MediaStreamConstraints", "console"] }
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0.134"
js-sys = "0.3"
serde-wasm-bindgen = "0.6.5"
rten = "0.13.1"
rten-tensor = "0.13.1"
rten-imageproc = "0.13.1"
anyhow = "1.0.95"